--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -30,7 +30,7 @@
             <td class="problemname-td">
               <a href="/users/{{ user.id }}">{{ user.login }}</a>
             </td>
-            {% if current_user.is_authenticated and current_user.is_admin() %}
+            {% if current_user.is_permitted(Permissions.GROUP_REMOVE_USER) %}
               <td class="id-td">
                 <a class="alert-danger delete-button" href="/groups/{{ group.id }}/remove_user/{{ user.id }}">
                   ×
@@ -43,20 +43,24 @@
     {% endif %}
   </div>
 
-  {% if current_user.is_authenticated and current_user.is_admin() %}
-    <div class="normal-block" id="admin-features">
+  <div class="normal-block" id="admin-features">
+    {% if current_user.is_permitted(Permissions.GROUP_ADD_USER) %}
       <br>
       <a href="/groups/{{group.id}}/add_user" class="list alert-admin">
         Добавить пользователя
       </a>
+    {% endif %}
+    {% if current_user.is_permitted(Permissions.GROUP_EDIT) %}
       <br>
       <a href="/groups/{{group.id}}/edit" class="list alert-admin">
         Редактировать группу
       </a>
+    {% endif %}
+    {% if current_user.is_permitted(Permissions.GROUP_DELETE) %}
       <br>
       <a href="/groups/{{ group.id }}/delete" class="alert-danger list">
         Удалить группу
       </a>
-    </div>
-  {% endif %}
+    {% endif %}
+  </div>
 {% endblock %}
