--- a/templates/user/users.html
+++ b/templates/user/users.html
@@ -29,7 +29,7 @@
             <td class="problemname-td">
               <a href="/users/{{ user.id }}">{{ user.login }}</a>
             </td>
-            {% if current_user.is_authenticated and current_user.is_admin() %}
+            {% if current_user.is_permitted(Permissions.USER_DELETE) %}
               <td class="id-td">
                 <a class="alert-danger delete-button" href="/users/{{ user.id }}/delete">
                   ×
