Small fixes and improvements

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css?{{ range(10000000000)|random }}">
     <link href="/static/css/codemirror.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
     <script src="/static/js/jquery-3.5.1.min.js"></script>
@@ -70,7 +70,7 @@
   </main>
   <footer>
     <div id="credits">
-      Pycon 0.9.9 by Adam Arutyunov.<br>
+      Pycon 0.9.10 by Adam Arutyunov.<br>
       Final Yandex.Lyceum 2020 project.<br>
     </div>
     <div id="footer-div"></div>
