--- a/templates/user/users.html
+++ b/templates/user/users.html
@@ -24,6 +24,9 @@
         {% for user in users %}
           <tr>
             <td class="id-td">
+              {% if user.get_role() != Roles.UserRole %}
+                <div class="problem-status" style="background-color: {{ user.get_role().color }}"></div>
+              {% endif %}
               {{ user.id }}
             </td>
             <td class="problemname-td">
