--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
         {% set links = {'/': ["Главная", Permissions.INDEX_VIEW],
           '/problems/': ["Задачи", Permissions.PROBLEMS_VIEW],
           '/contests/': ["Контесты", Permissions.CONTESTS_VIEW],
+          '/labours/': ["Работы", Permissions.LABOURS_VIEW],
           '/submissions/': ["Мои посылки", Permissions.SUBMISSIONS_VIEW],
           '/users/': ["Пользователи", Permissions.USERS_VIEW],
           '/groups/': ["Группы", Permissions.GROUPS_VIEW],
