--- a/templates/submission/submissions.html
+++ b/templates/submission/submissions.html
@@ -5,6 +5,7 @@
     <h2>
       Посылки
     </h2>
+    {{ page_scroller() }}
   </div>
   <div class="content-block">
     {% if submissions %}
@@ -91,4 +92,5 @@
       </table>
     {% endif %}
   </div>
+  {{ page_scroller() }}
 {% endblock %}
