--- a/templates/group/groups.html
+++ b/templates/group/groups.html
@@ -6,6 +6,7 @@
       Группы
     </h2>
   </div>
+  {{ page_scroller() }}
   <div class="content-block">
     {% if groups %}
       <table class="submissions-table">
@@ -56,4 +57,5 @@
       </a>
     </div>
   {% endif %}
+  {{ page_scroller() }}
 {% endblock %}
