--- a/templates/labour/results.html
+++ b/templates/labour/results.html
@@ -46,7 +46,9 @@
             </td>
             <td class="problemname-td">
               <span>
-                {{ user.login }}
+                <a href="/users/{{ user.id }}">
+                  {{ user.login }}
+                </a>
               </span>
             </td>
             <td class="id-td central-td">
